syntax = "proto3";

package proto;

option go_package = "internal/proto";

enum SecretType {
  UNKNOWN = 0;
  TEXT    = 1;
  BINARY  = 2;
  CARD    = 3;
  FILE    = 4;
}

message Secret {
  string     name        = 1;
  SecretType type        = 2;
  string     meta        = 3;  
  bytes      data        = 4;
  int64      version     = 5;
}

message SecretItem {
  string     name       = 1;
  SecretType type       = 2;
  int64      version    = 3;
}

message ListSecretsResponse {
  repeated SecretItem items = 1;
}

message GetSecretRequest {
  string name = 1;
}

message GetSecretResponse {
  Secret secret = 1;
}

message AddSecretRequest {
  Secret secret = 1;
}

message UpdateSecretRequest {
  Secret secret = 1;
}

message DeleteSecretRequest {
  string name = 1;
}