syntax = "proto3";

package proto;

option go_package = "internal/proto";

message User {
  string login     = 1;
  string password  = 2;
}

message UserAuthToken {
  string token = 1;
}